Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@ Either <strong>MyFont</strong> or <strong>MyFontGL</strong> generates 2 new font
 <p><img src="https://cloud.githubusercontent.com/assets/9798466/11919122/1f9ffb90-a730-11e5-93e3-e1260bca2d4b.PNG" alt="This fluxogram represents the information flow in this project."></p>
 
 <h3>
+<a id="result" class="anchor" href="#result" aria-hidden="true"><span class="octicon octicon-link"></span></a>Result</h3>
+
+<p><a href="https://www.youtube.com/watch?v=YgDEY2RUzq8">This is how it looks</a></p>
+
+<h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>This repository was created and is kept by Guilherme Recchi Cardozo (<a href="https://github.com/gcardozo123" class="user-mention">@gcardozo123</a>).</p>
@@ -100,7 +105,7 @@ Either <strong>MyFont</strong> or <strong>MyFontGL</strong> generates 2 new font
 
 <ul>
 <li>Email: gcardozo at inf ufsm br</li>
-<li><a href="br.linkedin.com/in/gcardozo123">LinkedIn</a></li>
+<li><a href="https://www.linkedin.com/in/gcardozo123">LinkedIn</a></li>
 <li><a href="https://twitter.com/gcardozo_">Twitter</a></li>
 </ul>
       </section>
